Fix random line breaks in pre-footer nav instances with hyphens

--- a/web/src/assets/style/_links.scss
+++ b/web/src/assets/style/_links.scss
@@ -31,6 +31,7 @@ a.scrollactive-item {
 
   a {
     text-decoration: none;
+    word-break: keep-all;
 
     @include desktop-down {
       width: min-instrinsic;
